frontend/landing/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: landing
  replicas: 1
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: adiatma/lke-landing
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "4Mi"
              cpu: "2m"
