frontend/landing/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: landing
  type: ClusterIP
